--- a/noeminagy.teacher/noeminagy.teacher.html
+++ b/noeminagy.teacher/noeminagy.teacher.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Clone Instagram - Paginação + Tags</title>
+  <title>Clone Instagram - Paginação + Tags (Links ocultos)</title>
   <style>
     :root{--bg:#fafafa;--card:#fff;--muted:#8e8e8e;--accent:#0095f6}
     html,body{height:100%;margin:0;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial;background:var(--bg);color:#111}
@@ -175,28 +175,29 @@
       const card = document.createElement("article");
       card.className = "card";
 
+      // Container da imagem
+      const imageContainer = document.createElement("div");
+      imageContainer.style.position = "relative";
+
+      // Link clicável (abre o Instagram)
+      const link = document.createElement("a");
+      link.href = dados.link || "#";
+      link.target = "_blank";
+
       const img = document.createElement("img");
       img.className = "thumb";
       img.src = dados.imagem;
       img.alt = nome;
+      link.appendChild(img);
 
       const label = document.createElement("div");
       label.textContent = nome;
       label.style = "position:absolute;top:5px;left:5px;background:rgba(0,0,0,0.7);color:#fff;padding:2px 6px;border-radius:3px;font-size:14px;font-weight:bold";
 
-      const wrap = document.createElement("div");
-      wrap.style.position = "relative";
-      wrap.appendChild(img);
-      wrap.appendChild(label);
+      imageContainer.append(link, label);
+      card.appendChild(imageContainer);
 
-      const tagList = document.createElement("div");
-      tagList.className = "tag-list";
-      dados.tags.forEach(tag => {
-        const t = document.createElement("span");
-        t.textContent = "#" + tag;
-        tagList.appendChild(t);
-      });
-
+      // Campo de tag
       const inputTag = document.createElement("input");
       inputTag.placeholder = "Digite uma tag...";
       const datalist = document.createElement("datalist");
@@ -215,6 +216,7 @@
         });
       });
 
+      // Botão adicionar tag
       const btnAddTag = document.createElement("button");
       btnAddTag.textContent = "Adicionar Tag";
       btnAddTag.onclick = async () => {
@@ -229,15 +231,33 @@
         setStatus(`Tag "${novaTag}" adicionada ao card ${nome}`, "synced");
       };
 
+      // Botão salvar (marca último editado)
       const salvarBtn = document.createElement("button");
       salvarBtn.textContent = "Salvar Card";
       salvarBtn.style.background = "#6c757d";
       salvarBtn.onclick = async () => {
+        const ref = doc(collection(db, NOME_COLECAO), nome);
+        await setDoc(ref, {
+          nome,
+          link: dados.link,
+          imagem: dados.imagem,
+          selecao: dados.selecao || "",
+          timestamp: new Date()
+        }, { merge: true });
         await updateMeta({ lastEdited: parseInt(nome) });
         setStatus(`Card ${nome} salvo`, "pending");
       };
 
-      card.append(wrap, inputTag, datalist, btnAddTag, salvarBtn, tagList);
+      // Lista de tags
+      const tagList = document.createElement("div");
+      tagList.className = "tag-list";
+      dados.tags.forEach(tag => {
+        const t = document.createElement("span");
+        t.textContent = "#" + tag;
+        tagList.appendChild(t);
+      });
+
+      card.append(inputTag, datalist, btnAddTag, salvarBtn, tagList);
       return card;
     }
 
