--- a/noeminagy.teacher/noeminagy.teacher.html
+++ b/noeminagy.teacher/noeminagy.teacher.html
@@ -9,8 +9,9 @@
     html,body{height:100%;margin:0;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial;background:var(--bg);color:#111}
     header{height:66px;background:#fff;border-bottom:1px solid #dbdbdb;display:flex;align-items:center;justify-content:space-between;padding:0 24px;position:sticky;top:0;z-index:10}
     .brand h1{font-family:'Grand Hotel',cursive;font-size:30px;margin:0}
+    .container{max-width:980px;margin:28px auto;}
     .grid{display:grid;grid-template-columns:repeat(4,1fr);gap:24px}
-    .card{background:var(--card);border:1px solid #dbdbdb;border-radius:3px;padding:8px;box-shadow:0 1px 0 rgba(0,0,0,0.02);position:relative}
+    .card{background:var(--card);border:1px solid #dbdbdb;border-radius:3px;padding:8px;box-shadow:0 1px 0 rgba(0,0,0,0.02)}
     .thumb{width:100%;aspect-ratio:319/486;object-fit:cover;border-radius:2px;display:block;background:#efefef}
     button{padding:8px 12px;border-radius:4px;border:0;background:var(--accent);color:#fff;cursor:pointer}
     input,select{width:100%;padding:8px;margin-top:6px;border:1px solid #ccc;border-radius:4px}
@@ -39,7 +40,6 @@
       bottom: 0;
       background: rgba(0, 0, 0, 0.85);
       z-index: 20;
-      border-radius: 2px;
       display: none;
       flex-direction: column;
       padding: 10px;
@@ -100,6 +100,20 @@
       background: rgba(255,255,255,0.1);
       border-radius: 50%;
     }
+
+    /* Media Queries para responsividade - IGUAL À PÁGINA DE REFERÊNCIA */
+    @media(min-width:1180px){
+      .container{max-width:100%;margin:28px;}
+    }
+    @media(max-width:1000px){
+      .grid{grid-template-columns:repeat(3,1fr)}
+    }
+    @media(max-width:720px){
+      .grid{grid-template-columns:repeat(2,1fr)}
+    }
+    @media(max-width:460px){
+      .grid{grid-template-columns:repeat(1,1fr)}
+    }
   </style>
 </head>
 <body>
@@ -112,7 +126,8 @@
   </header>
 
   <div id="syncStatus" class="sync-status" style="display:none"></div>
-  <main class="container" style="max-width:980px;margin:28px auto">
+  
+  <main class="container">
     <section id="feed" class="grid"></section>
   </main>
 
